--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Harmattan&family=Lateef&display=swap');
 @font-face {
     font-family: 'Tajawal';
-    src: url('css/Tajawal ExtraBold Regular.ttf') format('wttfoff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-     url('css/Tajawal ExtraBold Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('Tajawal ExtraBold Regular.ttf') format('wttfoff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+     url('Tajawal ExtraBold Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   } 
   @font-face {
     font-family: 'almohanad';
-    src: url('css/ae-almohanad.ttf') format('wttfoff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-     url('css/ae-almohanad.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+    src: url('ae-almohanad.ttf') format('wttfoff'), /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+     url('ae-almohanad.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   }
 * {
   text-align: center;
   font-family: 'Lateef', cursive;
-  /* font-family: "Tajawal"; */
   font-size: 20px;
 }
 
